--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
                         </li>
 
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Projects</a>
+                          <a class="nav-link" href="bulma.html">Projects</a>
                         </li>
 
                         <li class="nav-item">
