--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
                         </li>
 
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Testimonials</a>
+                          <a class="nav-link" href="testimonials.html">Testimonials</a>
                         </li>
 
                         <li class="nav-item">
