--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a class="nav-link" href="bulma.html">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Testimonials</a>
+                    <a class="nav-link" href="testimonials.html">Testimonials</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Contact</a>
