--- a/bulma.html
+++ b/bulma.html
@@ -26,7 +26,7 @@
 
                 <a href="" class="navbar-item is-active is-primary">projects</a>
 
-                <a href="" class="navbar-item">testimonials</a>
+                <a href="testimonials.html" class="navbar-item">testimonials</a>
 
                 <a href="" class="navbar-item">contact</a>
             </div>
@@ -83,6 +83,8 @@
           mojs
         </a>
       </nav>
+
+      
 
 
 
