edit nav active

--- a/testimonials.html
+++ b/testimonials.html
@@ -24,9 +24,9 @@
 
                 <a href="about.html" class="navbar-item">about</a>
 
-                <a href="bulma.html" class="navbar-item is-active is-primary">projects</a>
+                <a href="bulma.html" class="navbar-item ">projects</a>
 
-                <a href="" class="navbar-item">testimonials</a>
+                <a href="" class="navbar-item is-active is-success">testimonials</a>
 
                 <a href="" class="navbar-item">contact</a>
             </div>
