--- a/all.html
+++ b/all.html
@@ -24,11 +24,11 @@
 
                 <a href="about.html" class="navbar-item">about</a>
 
-                <a href="" class="navbar-item is-active is-primary">projects</a>
+                <a href="bulma.html" class="navbar-item is-active is-primary">projects</a>
 
-                <a href="" class="navbar-item">testimonials</a>
+                <a href="testimonials.html" class="navbar-item">testimonials</a>
 
-                <a href="" class="navbar-item">contact</a>
+                <a href="contact.html" class="navbar-item">contact</a>
             </div>
         </div>
 </div>
