--- a/bulma.html
+++ b/bulma.html
@@ -28,7 +28,7 @@
 
                 <a href="testimonials.html" class="navbar-item">testimonials</a>
 
-                <a href="" class="navbar-item">contact</a>
+                <a href="contact.html" class="navbar-item">contact</a>
             </div>
         </div>
 </div>
