--- a/sources.html
+++ b/sources.html
@@ -26,9 +26,9 @@
 
                 <a href="" class="navbar-item is-active is-primary">projects</a>
 
-                <a href="" class="navbar-item">testimonials</a>
+                <a href="testimonials.html" class="navbar-item">testimonials</a>
 
-                <a href="" class="navbar-item">contact</a>
+                <a href="contact.html" class="navbar-item">contact</a>
             </div>
         </div>
 </div>
