--- a/testimonials.html
+++ b/testimonials.html
@@ -28,7 +28,7 @@
 
                 <a href="" class="navbar-item is-active is-success">testimonials</a>
 
-                <a href="" class="navbar-item">contact</a>
+                <a href="contact.html" class="navbar-item">contact</a>
             </div>
         </div>
 </div>
